[gd_scene load_steps=8 format=3 uid="uid://cekpiftu2foqe"]

[ext_resource type="Script" path="res://scripts/gameobjects/systems/planetary_system.gd" id="1_g45dv"]
[ext_resource type="StyleBox" uid="uid://qg28xlo534vi" path="res://styleboxes/general/progress_bar_bg.tres" id="2_2wrsl"]
[ext_resource type="PackedScene" uid="uid://bw0iwyxhorfjc" path="res://scenes/ui/systems/PlanetIndicatorPanel.tscn" id="4_f174s"]
[ext_resource type="PackedScene" uid="uid://beqbst3q6fars" path="res://scenes/gameobjects/meteors/MeteorSpawner.tscn" id="15_cyway"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rt7un"]
size = Vector2(1000, 1000)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ipes8"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 0.290196)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0tddt"]
bg_color = Color(0.108636, 0.452808, 2.88785e-07, 1)

[node name="PlanetarySystem" type="Node2D"]
script = ExtResource("1_g45dv")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(500, 500)
shape = SubResource("RectangleShape2D_rt7un")

[node name="Planets" type="Node2D" parent="."]
position = Vector2(500, 500)

[node name="MeteorSpawners" type="Node2D" parent="."]
position = Vector2(500, 500)

[node name="MeteorSpawner1" parent="MeteorSpawners" instance=ExtResource("15_cyway")]
position = Vector2(-500, 500)

[node name="MeteorSpawner2" parent="MeteorSpawners" instance=ExtResource("15_cyway")]
position = Vector2(500, 500)

[node name="MeteorSpawner3" parent="MeteorSpawners" instance=ExtResource("15_cyway")]
position = Vector2(500, -500)

[node name="MeteorSpawner4" parent="MeteorSpawners" instance=ExtResource("15_cyway")]
position = Vector2(-500, -500)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1000.0
offset_bottom = 1000.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ipes8")

[node name="UnlockContainer" type="VBoxContainer" parent="Panel"]
z_index = 11
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="DiscoverLabel" type="Label" parent="Panel/UnlockContainer"]
texture_filter = 2
layout_mode = 2
theme_override_font_sizes/font_size = 90
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Panel/UnlockContainer"]
visible = false
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 90
theme_override_styles/background = ExtResource("2_2wrsl")
theme_override_styles/fill = SubResource("StyleBoxFlat_0tddt")

[node name="PlanetIndicatorPanel" parent="Panel" instance=ExtResource("4_f174s")]
layout_mode = 1

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
